@@ -1,3 +1,8 @@
+2011-10-17  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/47023
+	* gfortran.dg/c_kind_tests_3.f03: New.
+
 2011-10-15  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/50570
